--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,16 +1,16 @@
 /* fonts.css: Fuentes para Taqueritos */
 
 @font-face {
-  font-family: 'Rockeby regular';
-  src: url('../assets/fonts/rockebycd-regular.otf') format('truetype');
+  font-family: 'bespoke-serif';
+  src: url('../assets/fonts/bespokeserif-Variable.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Rockeby black';
-  src: url('../assets/fonts/rockebycd-black.otf') format('truetype');
+  font-family: 'a-love-of-thunder';
+  src: url('../assets/fonts/a-love-of-thunder.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -19,10 +19,10 @@
 
 /* Variables CSS para compatibilidad con código existente */
 :root {
-  --font-title: 'Rockeby black', serif;
-  --font-heading: 'Rockeby regular', serif;
-  --font-text: 'Rockeby regular', serif;
-  --font-sans: 'Rockeby regular', serif;
+  --font-title: 'a-love-of-thunder', serif;
+  --font-heading: 'bespoke-serif', serif;
+  --font-text: 'bespoke-serif', serif;
+  --font-sans: 'bespoke-serif', serif;
 }
 
 /* Clases de utilidad para usar directamente en HTML */
