--- a/src/views/Home/styles.css
+++ b/src/views/Home/styles.css
@@ -1,5 +1,5 @@
 #recipes{
-  background: #FDE820;
+  background: white;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
