--- a/src/components/common/DesktopNavbar/index.astro
+++ b/src/components/common/DesktopNavbar/index.astro
@@ -81,7 +81,7 @@ const menuItems = t('menu_items', { namespace: 'common', locale: currentLang }) 
     <div class="hidden md:flex">
       <SocialMediaIcons 
         currentLang={currentLang} 
-        iconColor='white'
+        iconColor='#242424'
         centered={false} 
       />
     </div>
