--- a/src/components/common/Discover/index.astro
+++ b/src/components/common/Discover/index.astro
@@ -15,7 +15,7 @@ export interface Props {
 const { title, images } = Astro.props;
 ---
 
-<div class="box-border flex flex-col gap-12 items-left justify-start px-4 md:px-24 py-0 relative w-full bg-white">
+<div class="box-border flex flex-col gap-12 items-left justify-start container mx-auto px-4 py-0 relative w-full bg-white">
   <h2 class="font-heading leading-none not-italic text-black text-4xl md:text-6xl tracking-tight text-left">
     {title}
   </h2>
