--- a/src/components/common/Categories/index.astro
+++ b/src/components/common/Categories/index.astro
@@ -21,7 +21,7 @@ const {
 const displayProducts = products.slice(0, 3);
 ---
 
-<div class="box-border content-stretch flex flex-col gap-[50px] items-start justify-start px-[90px] py-0 relative size-full">
+<div class="box-border content-stretch flex flex-col gap-[50px] items-start justify-start  py-0 relative size-full">
   <div class="font-sans leading-[0] not-italic relative shrink-0 text-black text-[55px] text-nowrap tracking-[-2px] font-extrabold">
     <p class="leading-[normal] whitespace-pre">{title}</p>
   </div>
