--- a/src/components/common/ProductsWithFilter/index.astro
+++ b/src/components/common/ProductsWithFilter/index.astro
@@ -106,7 +106,7 @@ const displayProducts = showAllProducts ? productItems : productItems.slice(0, 6
             <!-- Background Color -->
             <div 
               class="absolute inset-0 rounded-lg transition-all duration-300 group-hover:scale-105" 
-              style={`background-color: ${product.bgColor || '#f3f4f6'}`}
+              style={`background-image: url('${product.bgColor}'`}
             ></div>
             
             <!-- Product Image -->
